// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/select_team/SelectTeam should match snapshot 1`] = `
<div>
  <div>
    <div
      class="signup-header"
    >
      <a
        data-testid="back_button"
        href="/"
      >
        <span
          class="fa fa-1x fa-angle-left"
          id="back_button_icon"
          title="Back Icon"
        />
        Back
      </a>
    </div>
    <div
      class="col-sm-12"
    >
      <div
        class="select-team__container signup-team__container"
      >
        <img
          alt="signup team logo"
          class="signup-team-logo"
          src=""
        />
        <h1
          id="site_name"
        >
          Mattermost
        </h1>
        <h3
          class="color--light"
          id="site_description"
        >
          All team communication in one place, searchable and accessible anywhere
        </h3>
        <div
          class="signup__content"
          id="teamsYouCanJoinContent"
        >
          <div
            class="SelectTeam__sub-header"
          >
            <h4>
              Teams you can join: 
            </h4>
            <a
              class="LearnAboutTeamsLink"
              href="https://mattermost.com/pl/mattermost-academy-team-training?utm_source=mattermost&utm_medium=in-product&utm_content=learn_about_teams&uid=&sid=&edition=team&server_version="
              location="learn_about_teams"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                aria-hidden="true"
                class="icon icon-lightbulb-outline"
              />
              Learn about teams
            </a>
          </div>
          <div
            class="infinite-scroll signup-team-all"
          >
            <div
              class="signup-team-dir"
            >
              <a
                class=""
                href="#"
                id="Team_A"
              >
                <span
                  class="signup-team-dir__name"
                >
                  Team A
                </span>
                <span
                  class="fa fa-angle-right right signup-team__icon"
                  title="Join Team Icon"
                />
              </a>
            </div>
            <div
              class="signup-team-dir"
            >
              <a
                class=""
                href="#"
                id="B_Team"
              >
                <span
                  class="signup-team-dir__name"
                >
                  B Team
                </span>
                <span
                  class="fa fa-angle-right right signup-team__icon"
                  title="Join Team Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on create team restricted 1`] = `
<div>
  <div>
    <div
      class="signup-header"
    >
      <a
        data-testid="back_button"
        href="/"
      >
        <span
          class="fa fa-1x fa-angle-left"
          id="back_button_icon"
          title="Back Icon"
        />
        Back
      </a>
    </div>
    <div
      class="col-sm-12"
    >
      <div
        class="select-team__container signup-team__container"
      >
        <img
          alt="signup team logo"
          class="signup-team-logo"
          src=""
        />
        <h1
          id="site_name"
        >
          Mattermost
        </h1>
        <h3
          class="color--light"
          id="site_description"
        >
          All team communication in one place, searchable and accessible anywhere
        </h3>
        <div
          class="signup__content"
          id="teamsYouCanJoinContent"
        >
          <div
            class="SelectTeam__sub-header"
          >
            <h4>
              Teams you can join: 
            </h4>
            <a
              class="LearnAboutTeamsLink"
              href="https://mattermost.com/pl/mattermost-academy-team-training?utm_source=mattermost&utm_medium=in-product&utm_content=learn_about_teams&uid=&sid=&edition=team&server_version="
              location="learn_about_teams"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                aria-hidden="true"
                class="icon icon-lightbulb-outline"
              />
              Learn about teams
            </a>
          </div>
          <div
            class="infinite-scroll signup-team-all"
          >
            <div
              class="signup-team-dir"
            >
              <a
                class=""
                href="#"
                id="Team_A"
              >
                <span
                  class="signup-team-dir__name"
                >
                  Team A
                </span>
                <span
                  class="fa fa-angle-right right signup-team__icon"
                  title="Join Team Icon"
                />
              </a>
            </div>
            <div
              class="signup-team-dir"
            >
              <a
                class=""
                href="#"
                id="B_Team"
              >
                <span
                  class="signup-team-dir__name"
                >
                  B Team
                </span>
                <span
                  class="fa fa-angle-right right signup-team__icon"
                  title="Join Team Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on error 1`] = `
<div>
  <div>
    <div
      class="signup-header"
    >
      <a
        data-testid="back_button"
        href="/"
      >
        <span
          class="fa fa-1x fa-angle-left"
          id="back_button_icon"
          title="Back Icon"
        />
        Back
      </a>
    </div>
    <div
      class="col-sm-12"
    >
      <div
        class="select-team__container signup-team__container"
      >
        <img
          alt="signup team logo"
          class="signup-team-logo"
          src=""
        />
        <h1
          id="site_name"
        >
          Mattermost
        </h1>
        <h3
          class="color--light"
          id="site_description"
        >
          All team communication in one place, searchable and accessible anywhere
        </h3>
        <div
          class="signup__content"
        >
          <div
            class="form-group has-error"
          >
            <div
              class="control-label"
            >
              error message
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on loading 1`] = `
<div>
  <div>
    <div
      class="signup-header"
    >
      <a
        data-testid="back_button"
        href="/"
      >
        <span
          class="fa fa-1x fa-angle-left"
          id="back_button_icon"
          title="Back Icon"
        />
        Back
      </a>
    </div>
    <div
      class="col-sm-12"
    >
      <div
        class="select-team__container signup-team__container"
      >
        <img
          alt="signup team logo"
          class="signup-team-logo"
          src=""
        />
        <h1
          id="site_name"
        >
          Mattermost
        </h1>
        <h3
          class="color--light"
          id="site_description"
        >
          All team communication in one place, searchable and accessible anywhere
        </h3>
        <div
          class="loading-screen"
          style="position: relative;"
        >
          <div
            class="loading__content"
          >
            <p>
              Loading
            </p>
            <div
              class="round round-1"
            />
            <div
              class="round round-2"
            />
            <div
              class="round round-3"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on no joinable team and is not system admin nor can create team 1`] = `
<div>
  <div>
    <div
      class="signup-header"
    >
      <a
        data-testid="back_button"
        href="/"
      >
        <span
          class="fa fa-1x fa-angle-left"
          id="back_button_icon"
          title="Back Icon"
        />
        Back
      </a>
    </div>
    <div
      class="col-sm-12"
    >
      <div
        class="select-team__container signup-team__container"
      >
        <img
          alt="signup team logo"
          class="signup-team-logo"
          src=""
        />
        <h1
          id="site_name"
        >
          Mattermost
        </h1>
        <h3
          class="color--light"
          id="site_description"
        >
          All team communication in one place, searchable and accessible anywhere
        </h3>
        <div
          class="signup__content"
          id="teamsYouCanJoinContent"
        >
          <div
            class="SelectTeam__sub-header"
          >
            <h4>
              Teams you can join: 
            </h4>
            <a
              class="LearnAboutTeamsLink"
              href="https://mattermost.com/pl/mattermost-academy-team-training?utm_source=mattermost&utm_medium=in-product&utm_content=learn_about_teams&uid=&sid=&edition=team&server_version="
              location="learn_about_teams"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                aria-hidden="true"
                class="icon icon-lightbulb-outline"
              />
              Learn about teams
            </a>
          </div>
          <div
            class="infinite-scroll signup-team-all"
          >
            <div
              class="signup-team-dir-err"
            >
              <div>
                No teams are available to join. Please ask your administrator for an invite.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on no joinable team and user is guest 1`] = `
<div>
  <div>
    <div
      class="signup-header"
    >
      <a
        data-testid="back_button"
        href="/"
      >
        <span
          class="fa fa-1x fa-angle-left"
          id="back_button_icon"
          title="Back Icon"
        />
        Back
      </a>
    </div>
    <div
      class="col-sm-12"
    >
      <div
        class="select-team__container signup-team__container"
      >
        <img
          alt="signup team logo"
          class="signup-team-logo"
          src=""
        />
        <h1
          id="site_name"
        >
          Mattermost
        </h1>
        <h3
          class="color--light"
          id="site_description"
        >
          All team communication in one place, searchable and accessible anywhere
        </h3>
        <div
          class="signup__content"
        >
          <div
            class="form-group has-error"
          >
            <div
              class="control-label"
            >
              Your guest account has no channels assigned. Please contact an administrator.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on no joinable team but can create team 1`] = `
<div>
  <div>
    <div
      class="signup-header"
    >
      <a
        data-testid="back_button"
        href="/"
      >
        <span
          class="fa fa-1x fa-angle-left"
          id="back_button_icon"
          title="Back Icon"
        />
        Back
      </a>
    </div>
    <div
      class="col-sm-12"
    >
      <div
        class="select-team__container signup-team__container"
      >
        <img
          alt="signup team logo"
          class="signup-team-logo"
          src=""
        />
        <h1
          id="site_name"
        >
          Mattermost
        </h1>
        <h3
          class="color--light"
          id="site_description"
        >
          All team communication in one place, searchable and accessible anywhere
        </h3>
        <div
          class="signup__content"
          id="teamsYouCanJoinContent"
        >
          <div
            class="SelectTeam__sub-header"
          >
            <h4>
              Teams you can join: 
            </h4>
            <a
              class="LearnAboutTeamsLink"
              href="https://mattermost.com/pl/mattermost-academy-team-training?utm_source=mattermost&utm_medium=in-product&utm_content=learn_about_teams&uid=&sid=&edition=team&server_version="
              location="learn_about_teams"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                aria-hidden="true"
                class="icon icon-lightbulb-outline"
              />
              Learn about teams
            </a>
          </div>
          <div
            class="infinite-scroll signup-team-all"
          >
            <div
              class="signup-team-dir-err"
            >
              <div>
                No teams are available to join. Please create a new team or ask your administrator for an invite.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
